--- a/css/style.css
+++ b/css/style.css
@@ -553,7 +553,7 @@ main {
   z-index: -999;
 }
 
-.cards {
+/* .cards {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -641,14 +641,85 @@ main {
 .card #boton:hover {
   background-color: #0097a7;
   color: #ffffff;
+} */
+
+.main-nosotros {
+  padding-top: 150px;
+  padding-bottom: 100px;
+}
+
+.contenedor-cards-nosotros {
+  width: 80%;
+  margin: auto;
+  margin-top: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-content: center;
+  flex-wrap: wrap;
+  gap: 30px;
+  background-color: rgba(0, 0, 0, 0.4);
+  padding: 50px;
+  border-radius: 15px;
+  box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.4);
+}
+
+.card-nosotros {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-content: center;
+  min-width: 15%;
+}
+
+.card-nosotros-img {
+  width: 150px;
+  height: 150px;
+  margin: auto;
+}
+
+.card-nosotros-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+  box-shadow: 2px 4px 8px #00bcd4;
+}
+
+.card-nosotros-texto {
+  width: 146px;
+  margin: auto;
+}
+
+.card-nosotros-texto p {
+  font-size: 20px;
+  font-weight: 600;
+  margin: 15px 0;
+}
+
+.card-nosotros-botones {
+  display: flex;
+  flex-direction: column;
+}
+
+.card-nosotros-botones button {
+  padding: 15px 0;
+  border: none;
+  margin: 5px;
+  box-shadow: 2px 4px 8px rgba(253, 253, 253, 0.4);
+  border-radius: 15px;
+  background-color: #00bcd4;
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: 600;
 }
 
 @media (max-width: 768px) {
-  .card {
+  /* .card {
     width: 100%;
     margin-right: 0;
     margin-bottom: 20px;
-  }
+  } */
 }
 
 @media (max-width: 1000px) {
