--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,6 @@ button:hover {
   list-style: none;
   display: flex;
   gap: 20px;
-  margin-right: 300px;
 }
 
 .nav-links li {
@@ -75,13 +74,21 @@ button:hover {
   color: white;
   text-decoration: none;
   font-size: 18px;
-  padding: 10px;
+  font-weight: 400;
+  padding: 30px;
   transition: color 0.3s;
 }
 
 .nav-links a:hover {
   color: #00bcd4;
 }
+
+.nav-links li a.active {
+  background-color: rgba(0, 0, 0, 0.4);
+  border-radius: 15px;
+  padding: 15px 30px;
+}
+
 .menu-toggle {
   display: none;
 }
@@ -107,31 +114,19 @@ button:hover {
     height: 70px;
   }
 
-  .banner-content h1 {
-    font-size: 40px !important;
-    margin-bottom: 10px;
-  }
-
   .services h2,
   .cta h2 {
     font-size: 15px !important;
     margin-bottom: 20px;
   }
 
-  .banner-content p {
-    font-size: 15px !important;
-  }
-
   .menu-icon {
     display: flex;
-    margin-right: 10%;
-  }
-
-  ul {
-    margin-left: 55%;
+    margin-top: 10%;
   }
 
   .nav-links {
+    margin-left: 15%;
     display: none;
     flex-direction: column;
     justify-content: right;
@@ -139,10 +134,15 @@ button:hover {
     position: absolute;
     top: 50px;
     left: 0;
-    width: 200px;
-    background: #00000028;
+    width: 70%;
+    background: #000000;
     padding: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  }
+
+  .nav-links li {
+    padding: 5px;
+    border-bottom: #dddddd18 solid;
   }
 
   .contact-btn {
