--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,23 @@ body {
   font-family: Arial, sans-serif;
 }
 
+h1 {
+  font-size: 40px;
+  font-weight: 700;
+}
+
+.bg-light {
+  background-color: #3B3939;
+}
+
+.bg-medium {
+  background-color: #252323;
+}
+
+.bg-dark {
+  background-color: #111;
+}
+
 button {
   padding: 15px 0;
   border: none;
@@ -513,7 +530,7 @@ footer .logo-uade img {
   text-align: center;
 }
 
-.contact-container {
+.container-light {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -553,53 +570,6 @@ footer .logo-uade img {
 }
 
 .btn-directions:hover {
-  background-color: #ffffff;
-  color: #00bcd4;
-}
-
-.contact-form-container {
-  flex: 1;
-  min-width: 300px;
-}
-
-.contact-form {
-  display: flex;
-  flex-direction: column;
-}
-
-.contact-form label {
-  margin-bottom: 5px;
-  font-weight: bold;
-}
-
-.contact-form input,
-.contact-form textarea {
-  margin-bottom: 20px;
-  padding: 10px;
-  border: none;
-  border-radius: 5px;
-  font-size: 16px;
-}
-
-.contact-form input:focus,
-.contact-form textarea:focus {
-  outline: none;
-  box-shadow: 0 0 5px rgba(0, 188, 212, 0.5);
-}
-
-.contact-form button {
-  padding: 10px 20px;
-  background-color: #00bcd4;
-  color: #ffffff;
-  border: none;
-  border-radius: 5px;
-  font-size: 16px;
-  font-weight: bold;
-  transition: background-color 0.3s;
-  cursor: pointer;
-}
-
-.contact-form button:hover {
   background-color: #ffffff;
   color: #00bcd4;
 }
