--- a/css/style.css
+++ b/css/style.css
@@ -192,7 +192,7 @@ button:hover {
 }
 
 .support-section {
-  background: linear-gradient(to top, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.479));
+  background: linear-gradient(to top, rgba(3, 85, 117, 0.048), rgba(0, 0, 0, 0.432), rgba(2, 59, 82, 0.178), rgba(3, 85, 117, 0.048));
   padding: 150px 20px 80px;
   color: white;
   text-align: center;
@@ -212,17 +212,13 @@ button:hover {
   max-width: 1250px;
   padding: 20px 190px;
   background-color: #ffffff;
-  background: linear-gradient(
-    to top,
-    rgba(255, 255, 255, 0.068),
-    rgba(255, 255, 255, 0.055)
-  );
+  background: rgba(0, 0, 0, 0.5);
   border-radius: 1px;
   color: #fff;
   text-align: center;
-  font-size: 15px;
+  font-size: 19px;
   font-style: normal;
-  line-height: 20px;
+  line-height: 25px;
   letter-spacing: 0.24px;
   margin: 0 auto;
   margin-bottom: 50px;
@@ -232,11 +228,7 @@ button:hover {
 .support-services {
   text-align: center;
   margin: 20px;
-  background: linear-gradient(
-    to top,
-    rgba(255, 255, 255, 0.068),
-    rgba(255, 255, 255, 0.055)
-  );
+  background: rgba(0, 0, 0, 0.5);
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -307,16 +299,14 @@ button:hover {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(
-    to top,
-    rgba(255, 255, 255, 0.068),
-    rgba(255, 255, 255, 0.055)
-  );
+  background: rgba(0, 0, 0, 0.5);
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   max-width: 1250px;
   margin: 0 auto;
+  font-size: 19px;
+  line-height: 25px;
 }
 
 .sup-section {
@@ -578,6 +568,7 @@ main {
   background: linear-gradient(to top, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.479));
   color: white;
   text-align: center;
+  padding: 1px;
 }
 
 .about-us {
